# life

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
include/: Cell.h  MatrixView.h  TCellField.h  TField.h  TMatrix.h  TMatrixView.h  TPrint.h
src/: Cell.cpp  TMatrix.cpp  main.cpp
tests/: CMakeLists.txt  main_test.cpp
